[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pystk2-gymnasium"
description = "Gymnasium wrapper for PySTK2"
authors = [
    {name = "Benjamin Piwowarski", email = "benjamin@piwowarski.fr"},
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PySuperTuxKart2>=0.5.1",
    "gymnasium>0.29.0",
    "numba",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/bpiwowar/pystk2-gymnasium"
Repository = "https://github.com/bpiwowar/pystk2-gymnasium"
Changelog = "https://github.com/bpiwowar/pystk2-gymnasium/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "dirty-tag" }
fallback-version = "0.1.0.dev0"
write-to = "src/pystk2_gymnasium/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pystk2_gymnasium"]
